# datapath

./: README.md  environment.dev.yml  environment.lock.yml  environment.yml  setup.cfg
.devcontainer/: devcontainer.json
.scripts/: build-environment.sh  post-create.sh
datapath/: __init__.py  path.py
tests/: conftest.py  test_path.py
