[metadata]
name = datapath
version = 0.0.5
author = Mason Flint
author_email = masonflint44@gmail.com
description = Easily navigate nested data structures for building readable data pipelines.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MasonFlint44/datapath
project_urls =
    Bug Tracker = https://github.com/MasonFlint44/datapath/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers

[options]
packages = find:
python_requires = >=3.10
install_requires =